--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
 
     <!-- Barra de navegación -->
-    <header class="navbar navbar-expand-lg  fixed-top bg-transparente">
+    <header class="navbar navbar-expand-lg navbar-white fixed-top bg-transparente">
         <!-- style="background-color: skyblue;"> -->
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -234,7 +234,9 @@
                 </div>
 
                 <div class="mb-3">
-                    <button type="button" class="btn bg-celeste">Enviar</button>
+                    <button type="button" class="btn bg-celeste" id="btnEnviar">Enviar</button>
+
+
                 </div>
 
             </form>
@@ -283,10 +285,27 @@
         </div>
     </footer> -->
 
+
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+
+
+
     <!-- Bootstrap JS (necesario para el funcionamiento de ciertos componentes) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+
+
+
+
+
+
+    <script src="assets/js/sript.js"></script>
+
+
+
 </body>
 
 </html>
