--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-    <!-- Estilos personalizados -->
+    <!-- Mis Estilos -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-
     <!-- Barra de navegación -->
     <header class="navbar navbar-expand-lg navbar-white fixed-top bg-transparente">
         <!-- style="background-color: skyblue;"> -->
@@ -57,7 +56,6 @@
 
 
     <!-- carrusel -->
-
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -82,13 +80,9 @@
         </button>
     </div>
 
-    <!-- fin carrusel -->
-
-
     <!-- Quienes Somos-->
     <article>
         <section>
-            <!-- <div class="container ocultar-sm quienes-somos"> -->
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -139,122 +133,88 @@
         </section>
     </article>
 
-
-
-
-
-
-
-    <!-- Contenedor principal -->
-
+    <!-- Destacados -->
     <h2 id="destacados" class="text-center text-white">DESTACADOS</h2>
-
     <section class="container">
-
-
-
         <div class="row">
-
             <!-- Tarjeta 1 -->
             <div class="card col-12 col-md-3 mt-5 bg-celeste ">
                 <img src="assets/img/card1.jpg" width=278px height=180px class="card-img-top" alt="card2">
                 <div class="card-body">
-                    <h2 class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora
+                    <h2 class="card-text text-blanco">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora
                         exercitationem
                         adipisci iure incidunt ad. Vero voluptatem unde repellendus voluptate mollitia, debitis
                         obcaecati
                         illo voluptatibus minima dolorum eligendi quis vel quaerat!</h2>
                 </div>
             </div>
-
             <!-- Tarjeta 2 -->
             <div class="card col-12 col-md-3 mt-5 bg-celeste ">
                 <img src="assets/img/card2.jpg" width=278px height=180px class="card-img-top" alt="card2">
                 <div class="card-body">
-                    <h2 class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora
+                    <h2 class="card-text  text-blanco">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora
                         exercitationem
                         adipisci iure incidunt ad. Vero voluptatem unde repellendus voluptate mollitia, debitis
                         obcaecati
                         illo voluptatibus minima dolorum eligendi quis vel quaerat!</h2>
                 </div>
             </div>
-
-
-
             <!-- Tarjeta 3 -->
             <div class="card col-12 col-md-3 mt-5 bg-celeste">
                 <img src="assets/img/card3.jpg" width=278px height=180px class="card-img-top" alt="card3">
                 <div class="card-body">
-                    <h2 class="card-text font-weight-normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    <h2 class="card-text  text-blanco font-weight-normal">Lorem ipsum dolor sit amet, consectetur
+                        adipisicing elit.
                         Omnis
                         hic optio unde odit quasi, doloremque at quo, iusto recusandae provident quam. Optio voluptatum
                         ut
                         illo! Quibusdam dolores recusandae corporis quas!</h2>
                 </div>
             </div>
-
-
-
-
             <!-- Tarjeta 4 -->
             <div class="card col-12 col-md-3 mt-5 bg-celeste">
                 <img src="assets/img/card4.jpg" width=278px height=180px class="card-img-top" alt="card4">
                 <div class="card-body">
-                    <h2 class="card-text font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <h2 class="card-text  text-blanco font-weight-normal">Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit.
                         Assumenda ipsam maxime dolor nemo, velit sit doloremque maiores quas atque voluptatibus
                         excepturi,
                         beatae, odit impedit ut natus asperiores dicta culpa nobis!</h2>
                 </div>
             </div>
         </div>
-
     </section>
-
-
 
     <!-- Formulario -->
     <header id="contacto" class="text-white" style="background-color: black;">
-
         <section class="container ">
             <h2 class="text-center text-white">CONTACTO</h2>
-
             <form>
                 <div class="mb-3 ">
                     <label class="form-label">Nombre</label>
+
                     <input type="email" class="form-control" id="exampleFormControlInput1">
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Asunto</label>
                     <input type="email" class="form-control" id="exampleFormControlInput1">
                 </div>
-
                 <div class="mb-3">
                     <label class="form-label">Mensaje</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
-
                 <div class="mb-3">
                     <button type="button" class="btn bg-celeste" id="btnEnviar">Enviar</button>
-
-
                 </div>
-
             </form>
-
-
-
         </section>
     </header>
 
+    <!--Footer-->
     <footer class="bg-celeste">
         <div class="container">
             <div class="row centrado ">
-
                 <p class="col-12 col-md-6 brand-text-footer text-blanco d-inline-block align-center">VIAJES CHILE</p>
-                <!-- <p class="col-12 col-md-6 text-blanco">Viajes Chile</p> -->
-
-
-                <!-- favs -->
                 <div class="col-12 col-md-6 text-blanco">
                     <div class="icono-footer">
                         <a href="https://github.com"><i class="fab fa-github-square fa-3x text-blanco"></i></a>
@@ -273,39 +233,15 @@
         </div>
     </footer>
 
-
-
-    <!-- fotter -->
-    <!-- <footer>
-        <div class="container text-center text-muted mt-4 p-2 bg-celeste"> -->
-
-    <!-- <a class="footer" href="#"><img src="assets/img/logo-black.png" alt="Cupon Negro" width="100"></a> -->
-
-    <!-- <p class="text-center mb-5">VIAJES CHILE</p>
-        </div>
-    </footer> -->
-
-
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-
-
 
     <!-- Bootstrap JS (necesario para el funcionamiento de ciertos componentes) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-
-
-
-
-
     <script src="assets/js/sript.js"></script>
-
-
-
 </body>
 
 </html>
