--- a/index.html
+++ b/index.html
@@ -26,9 +26,18 @@
 
 <body>
     <!-- Barra de navegación -->
-    <header class="navbar navbar-expand-lg navbar-white fixed-top bg-transparente">
-        <!-- style="background-color: skyblue;"> -->
+    <header class="navbar navbar-expand-lg navbar-dark fixed-top bg-transparente">
+
         <div class="container">
+
+            <!-- <a class="navbar-brand" href="#">
+                <span id="nav-mundo" class="align-middle brand-text-nav">
+                    <img id="logo-mundo" src="assets/img/viajes.svg" height="45px" alt="Logo" class="logoviajes"
+                        style="vertical-align: middle;">
+                    Viajes Chile
+                </span>
+            </a> -->
+
             <a class="navbar-brand" href="#">
                 <img height="30" src="/assets/img/viajes.svg" class="svg d-inline-block align-top" alt="Viajes Chile" />
                 Viajes Chile</a>
