--- a/index.html
+++ b/index.html
@@ -30,13 +30,6 @@
 
         <div class="container">
 
-            <!-- <a class="navbar-brand" href="#">
-                <span id="nav-mundo" class="align-middle brand-text-nav">
-                    <img id="logo-mundo" src="assets/img/viajes.svg" height="45px" alt="Logo" class="logoviajes"
-                        style="vertical-align: middle;">
-                    Viajes Chile
-                </span>
-            </a> -->
 
             <a class="navbar-brand" href="#">
                 <img height="30" src="/assets/img/viajes.svg" class="svg d-inline-block align-top" alt="Viajes Chile" />
@@ -92,11 +85,11 @@
     <!-- Quienes Somos-->
     <article>
         <section>
-            <div class="container">
+            <div id="quienessomos" class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2 id="quienessomos" class="text-center text-blanco">¿QUIENES SOMOS?</h2>
-                        <hr>
+                        <h2 class="text-center text-blanco">¿QUIENES SOMOS?</h2>
+                        <hr class="text-blanco">
                     </div>
                     <!-- cards -->
                     <div class=" col-4">
@@ -142,8 +135,10 @@
         </section>
     </article>
 
+
     <!-- Destacados -->
     <h2 id="destacados" class="text-center text-white">DESTACADOS</h2>
+    <hr class="text-blanco">
     <section class="container">
         <div class="row">
             <!-- Tarjeta 1 -->
@@ -198,6 +193,7 @@
     <header id="contacto" class="text-white" style="background-color: black;">
         <section class="container ">
             <h2 class="text-center text-white">CONTACTO</h2>
+            <hr>
             <form>
                 <div class="mb-3 ">
                     <label class="form-label">Nombre</label>
