--- a/index.html
+++ b/index.html
@@ -83,57 +83,55 @@
     </div>
 
     <!-- Quienes Somos-->
-    <article>
-        <section>
-            <div id="quienessomos" class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h2 class="text-center text-blanco">¿QUIENES SOMOS?</h2>
-                        <hr class="text-blanco">
+    <h2 id="quienessomos" class="text-center text-blanco ocultar-sm">¿QUIENES SOMOS?</h2>
+    <hr class="text-blanco">
+
+    <section class="ocultar-sm">
+        <div class="container">
+            <div class="row">
+                <!-- cards -->
+                <div class=" col-12 col-sm col-lg">
+                    <div class="card-body">
+                        <h5 class="bg-celeste centrado"><i class="fas fa-plane"></i></h5>
+                        <p class="card-text card-text_size text-blanco">Lorem ipsum dolor sit amet
+                            consectetur, adipisicing elit. Vitae odit, at sed animi, expedita totam obcaecati
+                            quisquam
+                            esse eligendi minus iusto nulla, illo nisi cumque? Molestias id voluptatum at pariatur
+                            earum. Sint nobis ea vel perferendis pariatur aut mollitia exercitationem in unde sit
+                            distinctio, molestiae quis, nulla, aliquid repellat vitae.
+                        </p>
                     </div>
-                    <!-- cards -->
-                    <div class=" col-4">
-                        <div class="card-body">
-                            <h5 class="bg-celeste centrado"><i class="fas fa-plane"></i></h5>
-                            <p class="card-text card-text_size text-blanco">Lorem ipsum dolor sit amet
-                                consectetur, adipisicing elit. Vitae odit, at sed animi, expedita totam obcaecati
-                                quisquam
-                                esse eligendi minus iusto nulla, illo nisi cumque? Molestias id voluptatum at pariatur
-                                earum. Sint nobis ea vel perferendis pariatur aut mollitia exercitationem in unde sit
-                                distinctio, molestiae quis, nulla, aliquid repellat vitae.
-                            </p>
-                        </div>
+                </div>
+                <div class="col-12 col-sm col-lg">
+                    <div class="card-body">
+                        <p class="card-text card-text_size text-blanco">Lorem ipsum dolor sit, amet
+                            consectetur adipisicing elit. Quia ad officia eveniet non id minima vel. At odit
+                            recusandae
+                            sequi repudiandae, fuga omnis placeat beatae aperiam odio asperiores quasi unde dolorum
+                            inventore nihil dolores, adipisci aliquam officia. Quam laborum blanditiis earum minima
+                            id
+                            debitis ipsam atque suscipit! Animi, iure incidunt!
+                        </p>
+                        <h5 class="bg-celeste centrado "><i class="fas fa-mountain"></i></h5>
                     </div>
-                    <div class="col-4">
-                        <div class="card-body">
-                            <p class="card-text card-text_size text-blanco">Lorem ipsum dolor sit, amet
-                                consectetur adipisicing elit. Quia ad officia eveniet non id minima vel. At odit
-                                recusandae
-                                sequi repudiandae, fuga omnis placeat beatae aperiam odio asperiores quasi unde dolorum
-                                inventore nihil dolores, adipisci aliquam officia. Quam laborum blanditiis earum minima
-                                id
-                                debitis ipsam atque suscipit! Animi, iure incidunt!
-                            </p>
-                            <h5 class="bg-celeste centrado "><i class="fas fa-mountain"></i></h5>
-                        </div>
-                    </div>
-                    <div class="col-4">
-                        <div class="card-body card-text_size">
-                            <h5 class="bg-celeste centrado"><i class="fas fa-route"></i></h5>
-                            <p class="card-text text-blanco">Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Explicabo laborum consectetur natus deleniti. Debitis reprehenderit, ut, voluptas
-                                libero perferendis similique dolore sequi blanditiis nesciunt facere cupiditate
-                                molestias
-                                adipisci sapiente repellat nisi placeat aliquid, beatae officia error assumenda dicta.
-                                Earum
-                                expedita eveniet fuga suscipit iusto nobis vitae quam libero ut mollitia?
-                            </p>
-                        </div>
+                </div>
+                <div class="col-12  col-sm col-lg">
+                    <div class="card-body card-text_size">
+                        <h5 class="bg-celeste centrado"><i class="fas fa-route"></i></h5>
+                        <p class="card-text text-blanco">Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Explicabo laborum consectetur natus deleniti. Debitis reprehenderit, ut, voluptas
+                            libero perferendis similique dolore sequi blanditiis nesciunt facere cupiditate
+                            molestias
+                            adipisci sapiente repellat nisi placeat aliquid, beatae officia error assumenda dicta.
+                            Earum
+                            expedita eveniet fuga suscipit iusto nobis vitae quam libero ut mollitia?
+                        </p>
                     </div>
                 </div>
             </div>
-        </section>
-    </article>
+        </div>
+    </section>
+
 
 
     <!-- Destacados -->
