--- a/index.html
+++ b/index.html
@@ -27,15 +27,11 @@
 <body>
     <!-- Barra de navegación -->
     <header class="navbar navbar-expand-lg navbar-dark fixed-top bg-transparente">
-
         <div class="container">
-
-
             <a class="navbar-brand" href="#">
                 <img height="30" src="/assets/img/viajes.svg" class="svg d-inline-block align-top" alt="Viajes Chile" />
                 Viajes Chile</a>
             </a>
-
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -43,9 +39,6 @@
 
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <nav class="navbar-nav ms-auto">
-
-                    <!--<nav class="navbar-nav bg-primary ms-auto"></nav> para saber padding-->
-
                     <a class="nav-link active text-white" aria-current="page" href="index.html">Inicio</a>
                     <a class="nav-link text-white" href="#quienessomos">Quienes Somos</a>
                     <a class="nav-link text-white" href="#destacados">Destacados</a>
@@ -55,7 +48,6 @@
             </div>
         </div>
     </header>
-
 
     <!-- carrusel -->
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -132,56 +124,62 @@
         </div>
     </section>
 
-
-
     <!-- Destacados -->
     <h2 id="destacados" class="text-center text-white">DESTACADOS</h2>
     <hr class="text-blanco">
+
     <section class="container">
         <div class="row">
-            <!-- Tarjeta 1 -->
-            <div class="card col-12 col-md-3 mt-5 bg-celeste ">
-                <img src="assets/img/card1.jpg" width=278px height=180px class="card-img-top" alt="card2">
-                <div class="card-body">
-                    <h2 class="card-text text-blanco">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora
-                        exercitationem
-                        adipisci iure incidunt ad. Vero voluptatem unde repellendus voluptate mollitia, debitis
-                        obcaecati
-                        illo voluptatibus minima dolorum eligendi quis vel quaerat!</h2>
-                </div>
-            </div>
-            <!-- Tarjeta 2 -->
-            <div class="card col-12 col-md-3 mt-5 bg-celeste ">
-                <img src="assets/img/card2.jpg" width=278px height=180px class="card-img-top" alt="card2">
-                <div class="card-body">
-                    <h2 class="card-text  text-blanco">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora
-                        exercitationem
-                        adipisci iure incidunt ad. Vero voluptatem unde repellendus voluptate mollitia, debitis
-                        obcaecati
-                        illo voluptatibus minima dolorum eligendi quis vel quaerat!</h2>
-                </div>
-            </div>
-            <!-- Tarjeta 3 -->
-            <div class="card col-12 col-md-3 mt-5 bg-celeste">
-                <img src="assets/img/card3.jpg" width=278px height=180px class="card-img-top" alt="card3">
-                <div class="card-body">
-                    <h2 class="card-text  text-blanco font-weight-normal">Lorem ipsum dolor sit amet, consectetur
-                        adipisicing elit.
-                        Omnis
-                        hic optio unde odit quasi, doloremque at quo, iusto recusandae provident quam. Optio voluptatum
-                        ut
-                        illo! Quibusdam dolores recusandae corporis quas!</h2>
-                </div>
-            </div>
-            <!-- Tarjeta 4 -->
-            <div class="card col-12 col-md-3 mt-5 bg-celeste">
-                <img src="assets/img/card4.jpg" width=278px height=180px class="card-img-top" alt="card4">
-                <div class="card-body">
-                    <h2 class="card-text  text-blanco font-weight-normal">Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit.
-                        Assumenda ipsam maxime dolor nemo, velit sit doloremque maiores quas atque voluptatibus
-                        excepturi,
-                        beatae, odit impedit ut natus asperiores dicta culpa nobis!</h2>
+            <div class="col-sm col-lg">
+                <div class="card-group flex-container">
+
+                    <!-- Tarjeta 1 -->
+                    <div class="card card1 mt-5">
+                        <img src="assets/img/card1.jpg" class="card-img-top img-responsive" alt="Card1" />
+                        <div class="card-body">
+                            <!-- <h5 class="card-title card1txt">Lorem ipsum dolor sit amet</h5> -->
+                            <p class="card-text card1txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem
+                                perferendis reiciendis tempora magnam distinctio ab maxime. Dolore cum ea, amet esse
+                                quos impedit sequi ut, id provident, nihil nemo quas? Perspiciatis unde enim possimus
+                                tempora accusamus perferendis asperiores, porro ratione.</p>
+                        </div>
+                    </div>
+
+                    <!-- Tarjeta 2 -->
+                    <div class="card card2  mt-5">
+                        <img src="/assets/img/card2.jpg" class="card-img-top img-responsive" alt="Card2" />
+                        <div class="card-body">
+                            <!-- <h5 class="card-title card2txt">Lorem ipsum dolor sit amet</h5> -->
+                            <p class="card-text card2txt">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Corporis illo provident, adipisci, fugiat eveniet repudiandae velit ratione aliquid,
+                                nemo expedita praesentium dicta similique suscipit. Inventore voluptatibus reiciendis
+                                officiis hic minus facilis cupiditate, molestias impedit! Commodi.</p>
+                        </div>
+                    </div>
+
+                    <!-- Tarjeta 3 -->
+                    <div class="card card3  mt-5">
+                        <img src="/assets/img/card3.jpg" class="card-img-top img-responsive" alt="Card3" />
+                        <div class="card-body">
+                            <!-- <h5 class="card-title card3txt">Lorem ipsum dolor sit amet</h5> -->
+                            <p class="card-text card3txt">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Voluptatum at quasi, vel ipsam adipisci nulla, iusto illum ex laboriosam dignissimos ad
+                                reiciendis delectus nam voluptate mollitia incidunt quo minus excepturi? Placeat
+                                laboriosam porro eum voluptas ducimus non officia maxime obcaecati.</p>
+                        </div>
+                    </div>
+
+                    <!-- Tarjeta 4 -->
+                    <div class="card card4  mt-5">
+                        <img src="/assets/img/card4.jpg" class="card-img-top img-responsive" alt="Card4" />
+                        <div class="card-body">
+                            <!-- <h5 class="card-title">Lorem ipsum dolor sit amet</h5> -->
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum alias vero
+                                quos, adipisci hic accusamus, qui architecto voluptas numquam beatae odit neque itaque
+                                unde deserunt tenetur voluptatum ab totam, voluptatem porro ut a? Eaque rem itaque
+                                assumenda, quod placeat sit?</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -195,7 +193,6 @@
             <form>
                 <div class="mb-3 ">
                     <label class="form-label">Nombre</label>
-
                     <input type="email" class="form-control" id="exampleFormControlInput1">
                 </div>
                 <div class="mb-3">
@@ -239,7 +236,6 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap JS (necesario para el funcionamiento de ciertos componentes) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
